prefix_rewrite/envoy.yaml
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route: { cluster: this-envoy }
          http_filters:
          - name: envoy.router
            config: {}
  - name: listener_rewrite
    address:
      socket_address: { address: 0.0.0.0, port_value: 10001 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route: { cluster: backend, prefix_rewrite: "/api/v1/" }
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: backend
    type: STRICT_DNS
    connect_timeout: 5s
    load_assignment:
      cluster_name: backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: api, port_value: 8080 }
  - name: this-envoy
    type: STRICT_DNS
    connect_timeout: 5s
    load_assignment:
      cluster_name: this-envoy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: envoy, port_value: 10001 }
